--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,7 +1,12 @@
 .navbar {
-    display: flex;
-    align-items: center;
+    
     height: 60px;
+    .container {
+        display: flex;
+        align-items: center;
+        height: 100%;
+        justify-content: space-between;
+    }
     .logo {
         width: 100px;
     }
@@ -21,6 +26,12 @@
             font-size: 13px;
             font-weight: 500;
 
+        }
+    }
+
+    .right {
+        svg {
+            color: white;
         }
     }
 }
