--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,6 +1,15 @@
 .navbar {
-    
+    color: #fff;
     height: 60px;
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    background: linear-gradient(to top, transparent 0%, rgba(0,0,0,.4) 50%);
+    transition: .2s;
+    &.scrolled {
+        background-color: var(--main-color);
+    }
     .container {
         display: flex;
         align-items: center;
@@ -30,8 +39,70 @@
     }
 
     .right {
+        display: flex;
+        align-items: center;
+        & > * {
+            margin-right: 14px;
+            cursor: pointer;          
+        }
         svg {
             color: white;
+            font-size: 20px;
+        }
+        .search {
+            display: flex;
+            align-items: center;
+            
+            input {
+                background: transparent;
+                outline: none;
+                border: none;
+                border-bottom: 1px solid #fff;
+                caret-color: #fff;
+                padding: 5px;
+                width: 0;
+                transition: .2s;
+                &::placeholder {
+                    color: #fff;
+                }
+            }
+        }
+        .username {
+            font-weight: bold;
+        }
+        .avatar {
+            width: 40px;
+            height: 40px;
+            border-radius: 50%;
+            overflow: hidden;
+            img {
+                max-width: 100%;
+            }
+        }
+        .profile {
+            position: relative;
+            // overflow: hidden;
+
+            &:hover{
+                .drop {
+                    top: 33px;
+                    z-index: 10;
+                    opacity: 1;
+                }
+            }
+
+            .drop {
+                display: flex;
+                flex-direction: column;
+                font-size: 14px;
+                background: var(--main-color);
+                padding: 5px;
+                position: absolute;
+                top: 0;
+                z-index: -1;
+                opacity: 0;
+                transition: .3s;
+            }
         }
     }
 }
